--- a/.environment
+++ b/.environment
@@ -7,7 +7,7 @@ export GTK_THEME=Adwaita:dark
 export XCURSOR_THEME=Obsidian
 
 # MusicPD settings
-export MPD_HOST=audioserver
+export MPD_HOST=audioserver.entropy
 
 # Bash settings
 export QUOTING_STYLE=literal
