--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -73,6 +73,11 @@ stream-buffer-size = 64MiB
 demuxer-max-bytes = 512MiB
 demuxer-readahead-secs = 30
 
+[custom.lang_en]
+profile-desc = "Prefer english audio and subtitles"
+alang = en,eng
+slang = en,eng
+
 # Use when playing DVDs from actual optical drive and not through ISO file.
 [protocol.dvdread]
 profile-desc = "DVD (old) protocol"
