--- a/.config/mpv/mpv.conf
+++ b/.config/mpv/mpv.conf
@@ -19,7 +19,7 @@ image-display-duration = inf
 audio-channels = stereo
 
 dvd-device = /dev/optical/tsst
-cdrom-device = /dev/optical/tsst
+cdda-device = /dev/optical/tsst
 bluray-device = /mnt/optical/aserverl
 
 alang = deu,de,eng,en
