--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -53,12 +53,12 @@
 # Directories
 #-------------------------------------------
 directory, has rifle_cmd.py, flag f = rifle_cmd.py 7z_simple.sh "$1"
+directory, has rifle_cmd.py, flag f = rifle_cmd.py zstd_simple.py "$1"
 directory, has rifle_cmd.py, flag f = rifle_cmd.py flac_encode.py "$1"
 directory, has rifle_cmd.py, flag f = rifle_cmd.py checksum.py --sha-scan "$1"
 directory, has rifle_cmd.py, flag f = rifle_cmd.py audio_rename.py --directory="$1"
 directory, has rifle_cmd.py, flag f = rifle_cmd.py album_package "$1"
 directory, has rifle_cmd.py, flag f = rifle_cmd.py xmount "$1"
-# TODO: add zstd_simple.py
 
 
 #-------------------------------------------
