--- a/.config/pulseserver_wrap.conf
+++ b/.config/pulseserver_wrap.conf
@@ -1,4 +1,20 @@
 {
     "pulseserver": "audioserver.entropy",
-    "pulsecookie": "/etc/pulse-cookie"
+    "pulsecookie": "/etc/pulse-cookie",
+    "dxvkmap": {
+        "template-0": "~/local/dxvk/template_0.conf",
+        "template-1": "~/local/dxvk/template_1.conf"
+    },
+    "envvarmap": {
+        "template-0": {
+            "WINEDLLOVERRIDES": "d3d8=n,b"
+        },
+        "template-1": {
+            "WINEDLLOVERRIDES": "d3d11=n,b;xinput1_4=n,b"
+        }
+    },
+    "headphones": [
+        "<PulseAudio device name of the headphones>",
+        "<another device>"
+    ]
 }
