--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -52,13 +52,13 @@
 #-------------------------------------------
 # Directories
 #-------------------------------------------
-directory, has rifle_cmd.py, flag f = rifle_cmd.py 7z_simple.sh "$1"
-directory, has rifle_cmd.py, flag f = rifle_cmd.py zstd_simple.py "$1"
-directory, has rifle_cmd.py, flag f = rifle_cmd.py flac_encode.py "$1"
-directory, has rifle_cmd.py, flag f = rifle_cmd.py checksum.py --sha-scan "$1"
-directory, has rifle_cmd.py, flag f = rifle_cmd.py audio_rename.py --directory="$1"
-directory, has rifle_cmd.py, flag f = rifle_cmd.py album_package "$1"
-directory, has rifle_cmd.py, flag f = rifle_cmd.py xmount "$1"
+directory, has rifle_cmd, flag f = rifle_cmd 7z_simple.sh "$1"
+directory, has rifle_cmd, flag f = rifle_cmd zstd_simple "$1"
+directory, has rifle_cmd, flag f = rifle_cmd flac_encode.py "$1"
+directory, has rifle_cmd, flag f = rifle_cmd checksum --sha-scan "$1"
+directory, has rifle_cmd, flag f = rifle_cmd audio_rename.py --directory="$1"
+directory, has rifle_cmd, flag f = rifle_cmd album_package "$1"
+directory, has rifle_cmd, flag f = rifle_cmd xmount "$1"
 
 
 #-------------------------------------------
@@ -75,15 +75,15 @@ ext x?html?, has lynx,                terminal = lynx -- "$@"
 #--------------------------------------------
 # Checksum files
 #--------------------------------------------
-ext sfv, has rifle_cmd.py, has checksum.py, flag f = rifle_cmd.py checksum.py --sfv-check "$1"
-ext sha, has rifle_cmd.py, has checksum.py, flag f = rifle_cmd.py checksum.py --sha-check "$1"
+ext sfv, has rifle_cmd, has checksum, flag f = rifle_cmd checksum --sfv-check "$1"
+ext sha, has rifle_cmd, has checksum, flag f = rifle_cmd checksum --sha-check "$1"
 
 
 #--------------------------------------------
 # Cuesheet files
 #--------------------------------------------
-ext cue, has rifle_cmd.py, has cmus-remote, flag f = rifle_cmd.py cmus-remote --queue "$@"
-ext cue, has rifle_cmd.py, has cdemu,       flag f = rifle_cmd.py cdemu load "$@"
+ext cue, has rifle_cmd, has cmus-remote, flag f = rifle_cmd cmus-remote --queue "$@"
+ext cue, has rifle_cmd, has cdemu,       flag f = rifle_cmd cdemu load "$@"
 
 
 #-------------------------------------------
@@ -127,7 +127,7 @@ ext o|so|a, has nm, terminal = nm "$@" | "$PAGER"
 #--------------------------------------------
 # VGM stream files
 #--------------------------------------------
-ext xa|wem|nop|hca|fsb, has rifle_cmd.py, flag f = rifle_cmd.py ${HOME}/local/vgmstream/vgm_play.sh "$@"
+ext xa|wem|nop|hca|fsb, has rifle_cmd, flag f = rifle_cmd ${HOME}/local/vgmstream/vgm_play.sh "$@"
 
 
 #--------------------------------------------
@@ -144,18 +144,18 @@ ext php = php -- "$1"
 #--------------------------------------------
 # Audio files
 #--------------------------------------------
-mime ^audio|ogg$, has rifle_cmd.py, has playmedia.py, flag f = rifle_cmd.py playmedia.py "$@"
-mime ^audio|ogg$, has rifle_cmd.py, has mpv,          flag f = rifle_cmd.py mpv --quiet -- "$@"
-mime ^audio|ogg$, has rifle_cmd.py, has cmus-remote,  flag f = rifle_cmd.py cmus-remote --queue "$@"
-ext midi?,        has wildmidi,                       flag f = wildmidi -- "$@"
+mime ^audio|ogg$, has rifle_cmd, has playmedia,   flag f = rifle_cmd playmedia "$@"
+mime ^audio|ogg$, has rifle_cmd, has mpv,         flag f = rifle_cmd mpv --quiet -- "$@"
+mime ^audio|ogg$, has rifle_cmd, has cmus-remote, flag f = rifle_cmd cmus-remote --queue "$@"
+ext midi?,        has wildmidi,                   flag f = wildmidi -- "$@"
 
 
 #--------------------------------------------
 # Video files
 #-------------------------------------------
-mime ^video,       has rifle_cmd.py, has playmedia.py, X, flag f = rifle_cmd.py playmedia.py "$@"
-mime ^video,       has rifle_cmd.py, has mpv, X,          flag f = rifle_cmd.py mpv --quiet  -- "$@"
-mime ^video|audio, has rifle_cmd.py, has vlc, X,          flag f = rifle_cmd.py vlc -- "$@"
+mime ^video,       has rifle_cmd, has playmedia, X, flag f = rifle_cmd playmedia "$@"
+mime ^video,       has rifle_cmd, has mpv, X,       flag f = rifle_cmd mpv --quiet  -- "$@"
+mime ^video|audio, has rifle_cmd, has vlc, X,       flag f = rifle_cmd vlc -- "$@"
 
 
 #-------------------------------------------
@@ -232,13 +232,13 @@ ext mkv|webm, has mkvtoolnix-gui, flag f = mkvtoolnix-gui --merge "$@"
 #--------------------------------------------
 # MP3 audio files
 #--------------------------------------------
-ext mp3, has rifle_cmd.py, has mpg123, flag f = rifle_cmd.py mpg123 --quiet --test --no-control -- "$@"
+ext mp3, has rifle_cmd, has mpg123, flag f = rifle_cmd mpg123 --quiet --test --no-control -- "$@"
 
 
 #--------------------------------------------
 # FLAC audio files
 #--------------------------------------------
-ext flac, has rifle_cmd.py, has flac, flag f = rifle_cmd.py flac --silent --test -- "$@"
+ext flac, has rifle_cmd, has flac, flag f = rifle_cmd flac --silent --test -- "$@"
 
 
 #--------------------------------------------
