Update and remove

--- a/.config/ranger/rifle.conf
+++ b/.config/ranger/rifle.conf
@@ -54,9 +54,9 @@
 #-------------------------------------------
 directory, has rifle_cmd, flag f = rifle_cmd 7z_simple.sh "$1"
 directory, has rifle_cmd, flag f = rifle_cmd zstd_simple "$1"
-directory, has rifle_cmd, flag f = rifle_cmd flac_encode.py "$1"
+directory, has rifle_cmd, flag f = rifle_cmd flac_encode "$1"
 directory, has rifle_cmd, flag f = rifle_cmd checksum --sha-scan "$1"
-directory, has rifle_cmd, flag f = rifle_cmd audio_rename.py --directory="$1"
+directory, has rifle_cmd, flag f = rifle_cmd audio_rename --directory="$1"
 directory, has rifle_cmd, flag f = rifle_cmd album_package "$1"
 directory, has rifle_cmd, flag f = rifle_cmd xmount "$1"
 
