--- a/.environment
+++ b/.environment
@@ -28,9 +28,9 @@ export RANGER_LOAD_DEFAULT_RC=FALSE
 export RIFLE_CMDSTAT_FIFO="/run/user/${UID}/rifle-cmdstat.sock"
 
 # IM settings
-#export GTK_IM_MODULE=fcitx
-#export QT_IM_MODULE=fcitx
-#export XMODIFIERS=@im=fcitx
+export GTK_IM_MODULE=fcitx
+export QT_IM_MODULE=fcitx
+export XMODIFIERS=@im=fcitx
 
 # Avoid doing environment setup multiple times.
 export _ENVIRONMENT_SETUP=1
